# hulk

./: .gitmodules  Cargo.toml
crates/control/: Cargo.toml
crates/hulk_extract/: Cargo.toml
crates/hulk_nao/: Cargo.toml
tools/machine-learning/genesis/: pyproject.toml
tools/machine-learning/genesis/tests/: test_rigid.py  test_rigid_island.py  test_rigid_speed.py
tools/machine-learning/mujoco/: nao.xml  nao_standup_info.py  pyproject.toml  standup.py  standup_zoo.py
tools/machine-learning/mujoco/learned-identification/scripts/: compare_sensor_data.py  render_best.py
tools/machine-learning/mujoco/learned-identification/src/learned_identification/: recording.py  run_optimizer.py  simulation.py
tools/machine-learning/mujoco/model/: nao.xml  scene.xml
tools/machine-learning/mujoco/nao_env/: nao_standup.py
tools/machine-learning/mujoco/nao_standup/: nao.xml
tools/machine-learning/mujoco/recordings/saved/: test-video-episode-23000.meta.json
tools/machine-learning/mujoco/scripts/: loco-mujoco-walking.py  mujoco-walking.py
tools/machine-learning/mujoco/standup/: record_training.py  record_video.py  run_zoo.sh
tools/machine-learning/mujoco/standup/hyperparameters/: ppo.yml
tools/machine-learning/mujoco/standup/wandb/: latest-run
tools/machine-learning/mujoco/standup/wandb/run-20241204_192118-jncrj115/: run-jncrj115.wandb
tools/machine-learning/mujoco/standup/wandb/run-20241204_192118-jncrj115/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
tools/machine-learning/mujoco/standup/wandb/run-20241204_192118-jncrj115/files/code/tools/machine-learning/mujoco/standup/: standup_zoo.py
(+51 files in other folders)
