[project]
name = "mujoco-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "mediapy>=1.2.2",
    "mujoco==2.3.5",
    "numpy>=2.1.2",
    "scipy>=1.14.1",
    "moviepy>=1.0.3",
    "stable-baselines3>=2.3.2",
    "gymnasium[classic-control,mujoco]",
]
